--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <title>Dev.to latest post</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js"></script>
     <link
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
@@ -299,5 +297,9 @@
        </div>
      </section>
       </main>
+    <footer>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js"></script>
+    </footer>
   </body>
 </html>
