--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <script src="src/index.js"></script>
   </head>
   <body>
     <div id="app">
@@ -298,8 +297,9 @@
      </section>
       </main>
     <footer>
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" async></script>
+        <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js" async></script>
+        <script src="src/index.js" async></script>
     </footer>
   </body>
 </html>
