Remove async from JS script

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     <footer>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" async></script>
         <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js" async></script>
-        <script src="src/index.js" async></script>
+        <script src="src/index.js"></script>
     </footer>
   </body>
 </html>
