--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
      </section>
       </main>
     <footer>
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js" async></script>
-        <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js" async></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/vue-infinite-scroll@2.0.2/vue-infinite-scroll.js"></script>
         <script src="src/index.js"></script>
     </footer>
   </body>
